--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ edition = "2021"
 clap = { version = "4.4.18", features = ["derive"] }
 glam = "0.25.0"
 image = "0.24.8"
-ndarray = "0.15.6"
-rerun = "0.12.1"
+rerun = { version = "0.12.1", features = ["sdk", "glam"], default-features = false }
+serde = { version = "1.0.196", features = ["derive"] }
