--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,13 @@ name = "scanner_3d"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+camera = ["dep:libcamera"]
 
 [dependencies]
 clap = { version = "4.4.18", features = ["derive"] }
-glam = "0.25.0"
-image = "0.24.8"
-rerun = { version = "0.12.1", features = ["sdk", "glam"], default-features = false }
+glam = "0.22.0" # same version as in rerun 0.16.1
+image = "0.24.9" # same version as in rerun 0.16.1
+rerun = { version = "0.16.1", features = ["sdk", "glam", "image"], default-features = false }
 serde = { version = "1.0.196", features = ["derive"] }
+libcamera = { version = "0.2.3", optional=true }
