motor stub; acquisition loop

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ anyhow = "1.0.44"
 rerun = { version = "0.16.1", features = ["sdk", "glam", "image"], default-features = false, optional = true}
 libcamera = { version = "0.2.3", optional=true }
 drm-fourcc = "2.2.0"
+rppal = "0.19.0"
