--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ glam = "0.25.0"
 image = "0.24.8"
 rerun = { version = "0.12.1", features = ["sdk", "glam"], default-features = false }
 serde = { version = "1.0.196", features = ["derive"] }
+time = ">=0.3.35"
