--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Build
       run: cargo build --verbose --no-default-features
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --verbose --no-default-features
