add missing actions cache key

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,7 @@ jobs:
         path: |
           ~/.cargo
           target
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         
     - name: Build
       run: cargo build --verbose --no-default-features
