--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
@@ -25,5 +25,17 @@ jobs:
     - name: Run tests
       run: cargo test --verbose --no-default-features
 
+  rerun-support:
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v3
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cargo
+          target
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        
     - name: Build with Rerun support
       run: cargo test --verbose --no-default-features --features rerun
