--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,7 +35,7 @@ jobs:
         path: |
           ~/.cargo
           target
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-cargo-rerun-${{ hashFiles('**/Cargo.lock') }}
         
     - name: Build with Rerun support
       run: cargo test --verbose --no-default-features --features rerun
