--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,18 +10,32 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-22.04
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4.2.2
     - name: Cache dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v4.1.2
       with:
         path: |
           ~/.cargo
           target
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         
-    - name: Build
-      run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --verbose --no-default-features
+
+  rerun-support:
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v4.2.2
+    - name: Cache dependencies
+      uses: actions/cache@v4.1.2
+      with:
+        path: |
+          ~/.cargo
+          target
+        key: ${{ runner.os }}-cargo-rerun-${{ hashFiles('**/Cargo.lock') }}
+        
+    - name: Build with Rerun support
+      run: cargo test --verbose --no-default-features --features rerun
