--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,20 @@ name = "scanner_3d"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["camera", "motor"]
+camera = ["dep:libcamera", "dep:drm-fourcc"]
+motor = ["dep:rppal"]
+rerun = ["dep:rerun"]
 
 [dependencies]
 clap = { version = "4.4.18", features = ["derive"] }
-glam = "0.25.0"
-image = "0.24.8"
-rerun = { version = "0.12.1", features = ["sdk", "glam"], default-features = false }
+glam = { version = "0.22.0", features = ["serde"] } # same version as in rerun 0.16.1
+image = "0.24.9" # same version as in rerun 0.16.1
 serde = { version = "1.0.196", features = ["derive"] }
-time = ">=0.3.35"
+serde_json = "1.0.80"
+anyhow = "1.0.44"
+rerun = { version = "0.16.1", features = ["sdk", "glam", "image"], default-features = false, optional = true}
+libcamera = { version = "0.2.3", optional=true }
+drm-fourcc = { version = "2.2.0", optional=true }
+rppal = { version = "0.19.0", optional=true}
