--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ rerun = { version = "0.16.1", features = ["sdk", "glam", "image"], default-featu
 libcamera = { version = "0.2.3", optional=true }
 drm-fourcc = { version = "2.2.0", optional=true }
 rppal = { version = "0.19.0", optional=true}
+websocket = { version = "0.27.1", features = ["sync"], default-features = false }
