--- a/scanner_ui/Cargo.toml
+++ b/scanner_ui/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eframe_template"
+name = "scanner_ui"
 version = "0.1.0"
 authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
 edition = "2021"
@@ -11,11 +11,12 @@ all-features = true
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [dependencies]
+msg = { path = "../msg" }
 egui = "0.28"
 eframe = { version = "0.28", default-features = false, features = [
     "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
     "default_fonts", # Embed the default egui fonts.
-    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
+    "wgpu",          # Use the wgpu rendering backend. Alternative: "glow".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
 log = "0.4"
@@ -40,16 +41,6 @@ wasm-bindgen-futures = "0.4"
 # HACK: pin web-sys to <0.3.70 until a new `eframe` is released containing
 # the following PR: https://github.com/emilk/egui/pull/4980
 version = ">= 0.3.4, < 0.3.70"
-
-[profile.release]
-opt-level = 2 # fast and small wasm
-
-# Optimize all dependencies even in debug builds:
-[profile.dev.package."*"]
-opt-level = 2
-
-
-[patch.crates-io]
 
 # If you want to use the bleeding edge version of egui and eframe:
 # egui = { git = "https://github.com/emilk/egui", branch = "master" }
