--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,7 @@ motor = ["dep:rppal"]
 rerun = ["dep:rerun"]
 
 [dependencies]
+msg = { path = "../msg" }
 clap = { version = "4.4.18", features = ["derive"] }
 glam = { version = "0.22.0", features = ["serde"] } # same version as in rerun 0.16.1
 image = "0.24.9" # same version as in rerun 0.16.1
