--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,7 +9,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  tests:
+  server:
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4.2.2
@@ -21,8 +21,8 @@ jobs:
           target
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         
-    - name: Run tests
-      run: cargo test --verbose --no-default-features
+    - name: Build server
+      run: cargo build --no-default-features --bin scanner_3d
 
   rerun-support:
     runs-on: ubuntu-22.04
@@ -37,4 +37,23 @@ jobs:
         key: ${{ runner.os }}-cargo-rerun-${{ hashFiles('**/Cargo.lock') }}
         
     - name: Build with Rerun support
-      run: cargo test --verbose --no-default-features --features rerun
+      run: cargo build --no-default-features --features rerun --bin scanner_3d
+
+  ui:
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v4.2.2
+    - name: Cache dependencies
+      uses: actions/cache@v4.1.2
+      with:
+        path: |
+          ~/.cargo
+          target
+        key: ${{ runner.os }}-cargo-ui-${{ hashFiles('**/Cargo.lock') }}
+        
+    - name: Build UI
+      run: |
+        cargo install --locked trunk
+        cd scanner_ui
+        trunk build
+
