--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,11 @@
-[package]
-name = "scanner_3d"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["server", "scanner_ui", "msg"]
+resolver = "2"
 
-[features]
-default = ["camera", "motor"]
-camera = ["dep:libcamera", "dep:drm-fourcc"]
-motor = ["dep:rppal"]
-rerun = ["dep:rerun"]
 
-[dependencies]
-clap = { version = "4.4.18", features = ["derive"] }
-glam = { version = "0.22.0", features = ["serde"] } # same version as in rerun 0.16.1
-image = "0.24.9" # same version as in rerun 0.16.1
-serde = { version = "1.0.196", features = ["derive"] }
-serde_json = "1.0.80"
-anyhow = "1.0.44"
-rerun = { version = "0.16.1", features = ["sdk", "glam", "image"], default-features = false, optional = true}
-libcamera = { version = "0.2.3", optional=true }
-drm-fourcc = { version = "2.2.0", optional=true }
-rppal = { version = "0.19.0", optional=true}
+[profile.release]
+opt-level = 2 # fast and small wasm
+
+# Optimize all dependencies even in debug builds:
+[profile.dev.package."*"]
+opt-level = 2
