--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 *.{bat,[bB][aA][tT]} text eol=crlf
 *.png filter=lfs diff=lfs merge=lfs -text
 *.ico filter=lfs diff=lfs merge=lfs -text
+.f3d filter=lfs diff=lfs merge=lfs -text
+.stl filter=lfs diff=lfs merge=lfs -text
