--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
 	"name": "raspberry-pi",
 	"build": {
-		"dockerfile": "Dockerfile",
+		"dockerfile": "../docker/Dockerfile",
 		"options": [
 			"--platform",
 			"linux/arm/v7"
