Cache CARGO_HOME in devcontainer as well

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,9 @@
 		"--platform",
 		"linux/arm/v7"
 	],
+	"mounts": [
+		"source=cargo-home,target=/root/.cargo,type=volume"
+	],
 	"customizations": {
 		"vscode": {
 			"settings": {},
