--- a/.github/workflows/raspberrypi.yml
+++ b/.github/workflows/raspberrypi.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: self-hosted
     container:
       image: ghcr.io/albertocenzato/scanner-3d-dev:1.0
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_PAT }}
     steps:
     - uses: actions/checkout@v4.2.2
     - name: Cache dependencies
