--- a/.github/workflows/raspberrypi.yml
+++ b/.github/workflows/raspberrypi.yml
@@ -16,6 +16,9 @@ jobs:
         password: ${{ secrets.GHCR_PAT }}
     steps:
     - uses: actions/checkout@v4.2.2
+      with:
+        token: ${{ secrets.GHCR_PAT }}
+		
     - name: Cache dependencies
       uses: actions/cache@v4.1.2
       with:
