--- a/.github/workflows/raspberrypi.yml
+++ b/.github/workflows/raspberrypi.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4.2.2
       with:
-        token: ${{ secrets.GHCR_PAT }}
-		
+        token: '${{ secrets.GHCR_PAT }}'
+
     - name: Cache dependencies
       uses: actions/cache@v4.1.2
       with:
