--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,12 +4,12 @@
 		"dockerfile": "../docker/Dockerfile",
 		"options": [
 			"--platform",
-			"linux/arm/v7"
+			"linux/arm64"
 		]
 	},
 	"runArgs": [
 		"--platform",
-		"linux/arm/v7"
+		"linux/arm64"
 	],
 	"mounts": [
 		"source=cargo-home,target=/root/.cargo,type=volume"
