--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,9 @@
-name: Raspberry
+name: Raspberry Release
 
 on:
   push:
+    branches:
+      - main
 
 env:
   CARGO_TERM_COLOR: always
@@ -30,4 +32,19 @@ jobs:
     - name: Build server
       run: |
         rustup default stable
-        cargo build --bin scanner_3d
+        cargo build --release --bin scanner_3d
+ 
+    # upload the binary to the release page
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.sha }}
+        release_name: Release ${{ github.sha }}
+        body: |
+          Changes in this Release:
+        draft: false
+        prerelease: false
+
