--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,18 @@
 {
 	"name": "raspberry-pi",
 	"build": {
-		"dockerfile": "Dockerfile",
-		"options": ["--platform", "linux/arm/v7"]
+		"dockerfile": "../docker/Dockerfile",
+		"options": [
+			"--platform",
+			"linux/arm64"
+		]
 	},
-	"mounts": [],
 	"runArgs": [
 		"--platform",
-		"linux/arm/v7"
+		"linux/arm64"
+	],
+	"mounts": [
+		"source=cargo-home,target=/root/.cargo,type=volume"
 	],
 	"customizations": {
 		"vscode": {
