--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["camera", "motor", "rerun"]
+default = ["rerun"]
 camera = ["dep:libcamera", "dep:drm-fourcc"]
 motor = ["dep:rppal"]
 rerun = ["dep:rerun"]
@@ -12,13 +12,21 @@ rerun = ["dep:rerun"]
 [dependencies]
 msg = { path = "../msg" }
 clap = { version = "4.4.18", features = ["derive"] }
-glam = { version = "0.22.0", features = ["serde"] } # same version as in rerun 0.16.1
+glam = { version = "0.22.0", features = [
+	"serde",
+] } # same version as in rerun 0.16.1
 image = "0.24.9" # same version as in rerun 0.16.1
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.80"
 anyhow = "1.0.44"
-rerun = { version = "0.16.1", features = ["sdk", "glam", "image"], default-features = false, optional = true}
-libcamera = { version = "0.2.3", optional=true }
-drm-fourcc = { version = "2.2.0", optional=true }
-rppal = { version = "0.19.0", optional=true}
-websocket = { version = "0.27.1", features = ["sync"], default-features = false }
+rerun = { version = "0.16.1", features = [
+	"sdk",
+	"glam",
+	"image",
+], default-features = false, optional = true }
+libcamera = { version = "0.2.3", optional = true }
+drm-fourcc = { version = "2.2.0", optional = true }
+rppal = { version = "0.19.0", optional = true }
+websocket = { version = "0.27.1", features = [
+	"sync",
+], default-features = false }
