--- a/scanner_ui/Cargo.toml
+++ b/scanner_ui/Cargo.toml
@@ -11,17 +11,17 @@ targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [dependencies]
 msg = { path = "../msg" }
-egui = "0.28"
-eframe = { version = "0.28", default-features = false, features = [
+egui = "0.31.1"
+eframe = { version = "0.31.1", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
     "wgpu",          # Use the wgpu rendering backend. Alternative: "glow".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
 log = "0.4"
 
+web-sys = { version = ">= 0.3.4", features = ["WebSocket", "MessageEvent"] }
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
-web-sys = { version = ">= 0.3.4, < 0.3.70", features = ["WebSocket", "MessageEvent"] }
 serde_json = "1.0.128"
 anyhow = "1.0.89"
 wasm-bindgen = "0.2.93"
@@ -33,12 +33,6 @@ env_logger = "0.10"
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
-
-# to access the DOM (to hide the loading text)
-[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
-# HACK: pin web-sys to <0.3.70 until a new `eframe` is released containing
-# the following PR: https://github.com/emilk/egui/pull/4980
-version = ">= 0.3.4, < 0.3.70"
 
 # If you want to use the bleeding edge version of egui and eframe:
 # egui = { git = "https://github.com/emilk/egui", branch = "master" }
