--- a/msg/Cargo.toml
+++ b/msg/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.196", features = ["derive"] }
 anyhow = "1.0.44"
+glam = { version = "0.22.0", features = ["serde"] }
