--- a/scanner_ui/Cargo.toml
+++ b/scanner_ui/Cargo.toml
@@ -28,6 +28,7 @@ wasm-bindgen = "0.2.93"
 glam = { version = "0.22.0", features = [
     "serde",
 ] } # same version as in rerun 0.16.1
+egui_plot = "0.32.1"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
