--- a/scanner_ui/Cargo.toml
+++ b/scanner_ui/Cargo.toml
@@ -29,6 +29,8 @@ glam = { version = "0.22.0", features = [
     "serde",
 ] } # same version as in rerun 0.16.1
 egui_plot = "0.32.1"
+wgpu = { version = "24.0.3", features = ["webgpu"], default-features = false }
+bytemuck = "1.22.0"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
