Bugfix: update binary target in github actions workflows

--- a/.github/workflows/raspberrypi.yml
+++ b/.github/workflows/raspberrypi.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Build server
       run: |
         rustup default stable
-        cargo build --bin scanner_3d
+        cargo build --bin server
