Feature/point cloud rendering (#7)
* Render empty canvas

* Show points received by server

* Point cloud rotation applied server-side

* Client collects the entire point cloud

* Basic point cloud creation functions

* Color points based on world position

* Move rendering to dedicated file; render test cylinder

* Render rotating axis

* Bugfix: add depth-buffering to correctly display overlapping objects

* Z up direction

* Bugfix: normalize circle vectors

* Use quaternions for rotations; rotate camera position with buttons

* Bugfix: axis drawing

* Update rerun to 0.22.1

* Rename "scanner_3d" binary to "server"

* Draw received point cloud

* Bugfix: update binary target in github actions workflows

* Drop deprecated websocket crate in favor of tungstenite

--- a/scanner_ui/Cargo.toml
+++ b/scanner_ui/Cargo.toml
@@ -17,18 +17,17 @@ eframe = { version = "0.31.1", default-features = false, features = [
     "wgpu",          # Use the wgpu rendering backend. Alternative: "glow".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
+egui_plot = "0.32.1"
+
 log = "0.4"
 
-web-sys = { version = ">= 0.3.4", features = ["WebSocket", "MessageEvent"] }
-# You only need serde if you want app persistence:
-serde = { version = "1", features = ["derive"] }
-serde_json = "1.0.128"
+web-sys = { version = "0.3.4", features = ["WebSocket", "MessageEvent"] }
+serde_json = "1.0.140"
 anyhow = "1.0.89"
 wasm-bindgen = "0.2.93"
-glam = { version = "0.22.0", features = [
-    "serde",
-] } # same version as in rerun 0.16.1
-egui_plot = "0.32.1"
+glam = { version = "0.28.0", features = ["serde"] }
+wgpu = { version = "24.0.3", features = ["webgpu"], default-features = false }
+bytemuck = "1.22.0"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
