--- a/msg/Cargo.toml
+++ b/msg/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0.196", features = ["derive"] }
-anyhow = "1.0.44"
-glam = { version = "0.22.0", features = ["serde"] }
+serde = { version = ">=1.0.196", features = ["derive"] }
+anyhow = ">=1.0.44"
+glam = { version = ">=0.28.0", features = ["serde"] }
