--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "scanner_3d"
+name = "server"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,14 +12,12 @@ rerun = ["dep:rerun"]
 [dependencies]
 msg = { path = "../msg" }
 clap = { version = "4.4.18", features = ["derive"] }
-glam = { version = "0.22.0", features = [
-	"serde",
-] } # same version as in rerun 0.16.1
-image = "0.24.9" # same version as in rerun 0.16.1
+glam = { version = "0.28.0", features = ["serde"] }
+image = "0.25.4"
 serde = { version = "1.0.196", features = ["derive"] }
-serde_json = "1.0.80"
+serde_json = "1.0.140"
 anyhow = "1.0.44"
-rerun = { version = "0.16.1", features = [
+rerun = { version = "0.22.1", features = [
 	"sdk",
 	"glam",
 	"image",
@@ -27,6 +25,6 @@ rerun = { version = "0.16.1", features = [
 libcamera = { version = "0.2.3", optional = true }
 drm-fourcc = { version = "2.2.0", optional = true }
 rppal = { version = "0.19.0", optional = true }
-websocket = { version = "0.27.1", features = [
-	"sync",
-], default-features = false }
+tungstenite = "0.27.0"
+log = "0.4.27"
+env_logger = "0.11.8"
