--- a/msg/Cargo.toml
+++ b/msg/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 serde = { version = ">=1.0.196", features = ["derive"] }
+serde_json = ">=1.0.140"
 anyhow = ">=1.0.44"
 glam = { version = ">=0.28.0", features = ["serde"] }
+log = ">=0.4.14"
