--- a/scanner_ui/Cargo.toml
+++ b/scanner_ui/Cargo.toml
@@ -21,8 +21,11 @@ egui_plot = "0.32.1"
 
 log = "0.4"
 
-web-sys = { version = "0.3.4", features = ["WebSocket", "MessageEvent"] }
-serde_json = "1.0.140"
+web-sys = { version = "0.3.4", features = [
+    "WebSocket",
+    "MessageEvent",
+    "BinaryType",
+] }
 anyhow = "1.0.89"
 wasm-bindgen = "0.2.93"
 glam = { version = "0.28.0", features = ["serde"] }
